fix: ipad spacing issue fixing

--- a/src/pages/home/components/RoadMap/style.scss
+++ b/src/pages/home/components/RoadMap/style.scss
@@ -2,6 +2,9 @@
 
 .roadMap_sec {
   @media (min-width:992px) {
+    padding: 40px 0;
+  }
+  @media (min-width:1280px) {
     padding: 110px 0;
   }
 }
